# fs_control_simulator

./: CMakeLists.txt  ParamBank.hpp  README.md  REDME.md  agh_racing_sim_LEM_foxglove.json  cone_detector.cpp  cone_track.hpp  double_track.cpp  double_track.hpp  drivetrain.hpp  engine.cpp  engine.h  false_dv_control_node.cpp  forces.cpp  forces.h  gitignore  install_depend.sh  libs.h  main.cpp  normal_model_forces.cpp  normal_model_forces.h  sim_loop.cpp  sim_loop.hpp  steer_geometry.cpp  steer_geometry.h  steering_system.cpp  steering_system.hpp  test_tire_model_time.cpp  tire.cpp  tire.h  tire_force_model.cpp  tire_force_model.h  tire_model.cpp  tire_model.hpp  track_edges.csv  track_generator.ipynb  uttilities.hpp  vehicle body.h  vehicle.cpp  vehicle.h  (+2 more)
LEM/: .gitignore
LEM/src/dv_bolid_description/: package.xml
LEM/src/dv_control/: .gitignore  CMakeLists.txt
LEM/src/dv_control/config/Params/: control_param.json  control_param_best_from_cma.json  control_param_best_from_cma_3runs.json
LEM/src/dv_control/include/: ParamBank.hpp  Vec2.hpp  path_processing.hpp  stanley.hpp  utilities.hpp  wrapper.hpp
LEM/src/dv_control/mpc_solver/: run_solver_gen.sh
LEM/src/dv_control/src/: stanley.cpp  wrapper.cpp
RTE/: .gitignore
RTE/dv_2d_pp_sim/: CMakeLists.txt  cones_out.csv  cones_out_big.csv  test_track2.csv  track.csv  track_slalom.csv
RTE/dv_bolid_description/: CMakeLists.txt
RTE/dv_control/: activate_mpc_env.sh  test_installation.py
RTE/lem_simulator/: false_dv_control_node.cpp  sim_loop.cpp
RTE/mpc_env/: .gitignore
RTE/src/dv_control/: .gitignore  install_dependencies.sh  package.xml  requirements.txt
RTE/src/dv_control/config/Params/: control_param.json
RTE/src/dv_control/include/: ParamBank.hpp  mpc_interface.hpp  path_processing.hpp  wrapper.hpp
RTE/src/dv_control/scripts/: technical_inspection.py
RTE/src/dv_control/src/: main.cpp  mpc_lti_charmles.cpp  mpc_lti_ka_racing.cpp  mpc_ltv_v_planner.cpp  pure_pursit.cpp
RTE/src/dv_interfaces/: CMakeLists.txt  README.md
RTE/src/dv_interfaces/msg/: Control.msg  DV_board.msg  DataLogger.msg  MPCDebug.msg  Stanley_debug.msg  full_state.msg
config/: lem_param.json
include/: ParamBank.hpp  double_track.hpp  drivetrain.hpp  sim_loop.hpp  steering_system.hpp  uttilities.hpp  wheels_dynamis_model.hpp
launch/: sim.launch
nieuzywane/: kinematic.hpp
quazi_static/: .gitignore  CMakeLists.txt
quazi_static/include/: engine.h  forces.h  libs.h  normal_model_forces.h  vehicle.h  vehicle_body.h
quazi_static/source/: engine.cpp  forces.cpp  normal_model_forces.cpp  tire.cpp  vehicle.cpp
quazi_static/tests/: example_test.cpp  test_engine.cpp
sim_calosc/: README.md
sim_calosc/dv_bolid_description/: README.md
sim_calosc/dv_graphslam/: CMakeLists.txt  README.md  package.xml
sim_calosc/dv_graphslam/config/: graphslam_params.yaml
sim_calosc/dv_graphslam/include/: GraphManager.h  GraphSLAM.h  Utils.h
sim_calosc/dv_graphslam/launch/: graphslam.launch
sim_calosc/dv_graphslam/src/: GraphManager.cpp  GraphSLAM.cpp  graphslam_node.cpp
sim_calosc/dv_odometry/: .gitignore  CMakeLists.txt  package.xml
sim_calosc/dv_odometry/config/: parms.json
sim_calosc/dv_odometry/include/EKF/: EKF.hpp  ParamBank.hpp  wrapper.hpp
sim_calosc/dv_odometry/include/complementary/: ParamBank.hpp  complementary.hpp  wrapper.hpp
sim_calosc/dv_odometry/launch/: dv_odometry.launch
sim_calosc/dv_odometry/src/EKF/: EKF.cpp  main.cpp  wrapper.cpp
sim_calosc/dv_odometry/src/complementary/: complementary.cpp  main.cpp  wrapper.cpp
sim_calosc/dv_path_planning/: CMakeLists.txt  README.md  package.xml
sim_calosc/dv_path_planning/include/common/: Geometry.h  Vec2.h  config.h
sim_calosc/dv_path_planning/include/cone_chain/: Cone.h  ConeLookup.h  ConeType.h  Side.h  TrackdriveConeChainCreator.h
sim_calosc/dv_path_planning/include/path_planner/: DiscoveryPathPlanner.h  MissionState.h  PathPlanner.h  TrackdrivePathPlanner.h
sim_calosc/dv_path_planning/include/rviz/: RvizConesMarkers.h  RvizMarkers.h
sim_calosc/dv_path_planning/launch/: path_planning.launch
sim_calosc/dv_path_planning/src/: path_planning_discovery_node.cpp  path_planning_trackdrive_node.cpp
sim_calosc/dv_path_planning/src/common/: BolideDescriptor.cpp  Geometry.cpp
sim_calosc/dv_path_planning/src/cone_chain/: Cone.cpp  ConeLookup.cpp
sim_calosc/dv_path_planning/src/path_planner/: DiscoveryPathPlanner.cpp  PathPlanner.cpp  TrackdrivePathPlanner.cpp
sim_calosc/dv_path_planning/src/rviz/: RvizConesMarkers.cpp  RvizMarkers.cpp
sim_calosc/dv_path_planning/test/: testBolideDesc.cpp  testConeDesc.cpp  testGeometry.cpp  testVec2.cpp
sim_calosc/lem_simulator/: CMakeLists.txt  package.xml  sim_loop.cpp
sim_calosc/lem_simulator/config/: params_default_lem.json
sim_calosc/lem_simulator/include/: ParamBank.hpp  cone_detector.hpp  double_track.hpp  sim_loop.hpp  tire_model.hpp
sim_calosc/lem_simulator/launch/: no_pp_test.launch  sim.launch
sim_calosc/lem_simulator/src_helpers/: cone_detector.cpp  cone_detector_ideal.cpp  cone_track.cpp  double_track.cpp  steering_system.cpp  tire_model.cpp
sim_calosc/lem_simulator/tracks/: random_track_cones_1.csv  random_track_cones_10.csv  random_track_cones_11.csv  random_track_cones_12.csv  random_track_cones_14.csv  random_track_cones_21.csv  random_track_cones_25.csv  random_track_cones_29.csv  random_track_cones_37.csv  random_track_cones_4.csv  random_track_cones_43.csv  random_track_cones_44.csv  random_track_cones_50.csv  random_track_cones_7.csv  random_track_cones_8.csv  random_track_cones_9.csv  random_track_track_13.csv  random_track_track_22.csv  random_track_track_23.csv  random_track_track_24.csv  random_track_track_29.csv  random_track_track_3.csv  random_track_track_30.csv  random_track_track_35.csv  random_track_track_41.csv  random_track_track_44.csv  random_track_track_48.csv  random_track_track_5.csv  random_track_track_6.csv
src_helpers/: cone_detector.cpp  double_track.cpp  steering_system.cpp  test_cone_detector.cpp  tire_model.cpp  utiliities.cpp
tracks/: track_generator.ipynb
(+233 files in other folders)
