<?xml version="1.0"?>
<package format="2">
  <name>dv_bolid_description</name>
  <version>0.0.0</version>
  <description>The dv_bolid_description package</description>

  <author email="idk@idk.idk">Nicolas Duc</author>
  <maintainer email="altair1x2@gmail.com">Rafał Górecki</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
