<?xml version="1.0"?>
<package format="2">
  <name>dv_control</name>
  <version>0.0.0</version>
  <description>The control package</description>

   <maintainer email="paulina.gacek.pl@gmail.com">Paulina Gacek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>core2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dv_slam</build_depend>
  <build_depend>dv_path_planning</build_depend>
  <build_depend>dv_interfaces</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>nlohmann_json</build_depend>
  <build_depend>visualization_msgs</build_depend>
  

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>dv_path_planning</build_export_depend>
  <build_export_depend>dv_slam</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>core2</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>nlohmann_json</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>core2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dv_path_planning</exec_depend>
  <exec_depend>dv_slam</exec_depend>
  <exec_depend>dv_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>nlohmann_json</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>

